--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "my-app",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://arrb.github.io/arrb.github.io",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -25,6 +26,8 @@
     },
     "scripts": {
         "start": "react-scripts start",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
@@ -50,6 +53,7 @@
     },
     "devDependencies": {
         "@types/js-yaml": "^4.0.5",
+        "gh-pages": "^5.0.0",
         "prettier": "2.8.8"
     }
 }
