--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "my-app",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://arrb.github.io/arrb.github.io",
+    "homepage": "https://arrb.github.io/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -14,13 +14,13 @@
         "@types/react-router-dom": "^5.3.3",
         "classnames": "^2.3.2",
         "js-yaml": "^4.1.0",
-        "node-sass": "^9.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
         "react-router-dom": "^6.10.0",
         "react-scripts": "5.0.1",
         "react-type-animation": "^3.0.1",
+        "sass": "^1.77.6",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
     },
